EXTRA_DIST = README.document \
	architecture.svg \
	architecture.txt \
	class-hierarchy.dia \
	coordinates.txt \
	HACKING.de.txt \
	HACKING.fr.txt \
	HACKING.it.txt \
	HACKING.pt_BR.txt \
	HACKING.txt \
	keys.README \
	keys.xml \
	keys.de.xml \
	keys.fr.xml \
	keys-svg.xsl \
	keys-html.xsl \
	keys.html \
	keys.de.html \
	keys.fr.html \
	refcounting.txt
